set fixed list element height & use text-overflow ellipsis for second line of short description in document teaser

--- a/app/components/resources/map/list/list-sidebar.scss
+++ b/app/components/resources/map/list/list-sidebar.scss
@@ -17,7 +17,19 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    min-height: 62px;
+    height: 62px;
+
+    .document-teaser-container {
+      width: calc(100% - 56px);
+
+        .subtitle {
+          display: -webkit-box;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+      }
+    }
 
     .move-into-button {
       position: relative;
